SEO/GEO/AEO audit implementation: Schema, FAQ, H1, alt, image names
- Fix H1 hierarchy: single H1 per page (home, about, contact, works, blog)
- Fill all empty alt attributes across all pages (45+ images)
- Add Schema.org Service JSON-LD for all 8 services
- Add Schema.org Review JSON-LD for 4 testimonials
- Add FAQ section with 4 questions + Schema.org FAQPage
- Update meta description for AEO optimization
- Rename generic images (1.png→forbes-media-partner.png etc)
- Add FAQ CSS with responsive grid layout
- Add audit analysis document (docs/)

Made-with: Cursor

--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
         <div class="sitemap">
             <div class="w-layout-blockcontainer main-container w-container">
                 <div class="inner-sitemap">
-                    <h2 data-w-id="darkyn25" style="opacity: 0;" class="sitemap-heading">about</h2>
+                    <h1 data-w-id="darkyn25" style="opacity: 0;" class="sitemap-heading">about</h1>
                     <div data-w-id="darkyn26" style="opacity: 0;" class="stemap-text">Who We are and what we do</div>
                 </div>
             </div>
@@ -212,16 +212,16 @@
                 <h2 class="main-title">MEDIA PARTNERS</h2>
                 <div class="hero-partners partners-about">
                     <div data-w-id="darkyn27" class="hero-partners-moving">
-                        <img src="images/1.png"  width="238.5" alt="Forbes - Media Partner" class="hero-client-logo" />
-                        <img src="images/2.png"  width="238.5" alt="Bitcoin.com - Media Partner" class="hero-client-logo" />
-                        <img src="images/3.png"  width="238.5" alt="Cointelegraph - Media Partner" class="hero-client-logo" />
-                        <img src="images/5.png"  width="238.5" alt="CoinDesk - Media Partner" class="hero-client-logo" />
-                        <img src="images/6.png"  width="238.5" alt="Binance - Media Partner" class="hero-client-logo" />
-                        <img src="images/7.png"  width="238.5" alt="CoinMarketCap - Media Partner" class="hero-client-logo" />
-                        <img src="images/4.png"  width="238.5" alt="Skkicmotion - Media Partner" class="hero-client-logo" />
-                        <img src="images/1.png"  width="238.5" alt="Forbes - Media Partner" class="hero-client-logo" />
-                        <img src="images/2.png"  width="238.5" alt="Bitcoin.com - Media Partner" class="hero-client-logo" />
-                        <img src="images/3.png"  width="238.5" alt="Cointelegraph - Media Partner" class="hero-client-logo" />
+                        <img src="images/forbes-media-partner.png"  width="238.5" alt="Forbes - Media Partner" class="hero-client-logo" />
+                        <img src="images/bitcoin-com-media-partner.png"  width="238.5" alt="Bitcoin.com - Media Partner" class="hero-client-logo" />
+                        <img src="images/cointelegraph-media-partner.png"  width="238.5" alt="Cointelegraph - Media Partner" class="hero-client-logo" />
+                        <img src="images/coindesk-media-partner.png"  width="238.5" alt="CoinDesk - Media Partner" class="hero-client-logo" />
+                        <img src="images/binance-media-partner.png"  width="238.5" alt="Binance - Media Partner" class="hero-client-logo" />
+                        <img src="images/coinmarketcap-media-partner.png"  width="238.5" alt="CoinMarketCap - Media Partner" class="hero-client-logo" />
+                        <img src="images/skkicmotion-media-partner.png"  width="238.5" alt="Skkicmotion - Media Partner" class="hero-client-logo" />
+                        <img src="images/forbes-media-partner.png"  width="238.5" alt="Forbes - Media Partner" class="hero-client-logo" />
+                        <img src="images/bitcoin-com-media-partner.png"  width="238.5" alt="Bitcoin.com - Media Partner" class="hero-client-logo" />
+                        <img src="images/cointelegraph-media-partner.png"  width="238.5" alt="Cointelegraph - Media Partner" class="hero-client-logo" />
                     </div>
                 </div>
             </div>
@@ -355,23 +355,23 @@
                     <div data-w-id="darkyn04" class="socials">
                         <a href="https://x.com/wevolv3_media" target="_blank" class="social-link w-inline-block">
                             <div class="social-text">X</div>
-                            <img src="images/arrow-down-right.png"  alt="" class="social-arrow" />
+                            <img src="images/arrow-down-right.png"  alt="External link arrow" class="social-arrow" />
                         </a>
                         <a href="https://www.linkedin.com/company/wevol3-web3-marketing" target="_blank" class="social-link w-inline-block">
                             <div class="social-text">linkedin</div>
-                            <img src="images/arrow-down-right.png"  alt="" class="social-arrow" />
+                            <img src="images/arrow-down-right.png"  alt="External link arrow" class="social-arrow" />
                         </a>
                         <a href="https://wevolv3.com" target="_blank" class="social-link w-inline-block">
                             <div class="social-text">website</div>
-                            <img src="images/arrow-down-right.png"  alt="" class="social-arrow" />
+                            <img src="images/arrow-down-right.png"  alt="External link arrow" class="social-arrow" />
                         </a>
                         <a href="https://t.me/wevolv3" target="_blank" class="social-link w-inline-block">
                             <div class="social-text">telegram</div>
-                            <img src="images/arrow-down-right.png"  alt="" class="social-arrow" />
+                            <img src="images/arrow-down-right.png"  alt="External link arrow" class="social-arrow" />
                         </a>
                         <a href="https://wevolv3.com/blog" class="social-link last-social w-inline-block">
                             <div class="social-text">blog</div>
-                            <img src="images/arrow-down-right.png"  alt="" class="social-arrow" />
+                            <img src="images/arrow-down-right.png"  alt="External link arrow" class="social-arrow" />
                         </a>
                     </div>
                 </div>
@@ -390,7 +390,7 @@
                         2025 Wevolv3. All rights reserved.
                     </div>
                     <div data-w-id="darkyn06" class="right-copyright">
-                        <a href="#home" class="backtotop w-inline-block"><img  src="images/back-top_1back-top.png" alt="" /></a>
+                        <a href="#home" class="backtotop w-inline-block"><img  src="images/back-top_1back-top.png" alt="Back to top" /></a>
                     </div>
                 </div>
             </div>
