--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
         <div class="sitemap">
             <div class="w-layout-blockcontainer main-container w-container">
                 <div class="inner-sitemap">
-                    <h2 data-w-id="darkyn25" style="opacity: 1;" class="sitemap-heading">contact</h2>
+                    <h1 data-w-id="darkyn25" style="opacity: 1;" class="sitemap-heading">contact</h1>
                     <div data-w-id="darkyn26" style="opacity: 1;" class="stemap-text">Get in touch with us</div>
                 </div>
             </div>
@@ -220,23 +220,23 @@
                     <div data-w-id="darkyn04" class="socials">
                         <a href="https://x.com/wevolv3_media" target="_blank" class="social-link w-inline-block">
                             <div class="social-text">X</div>
-                            <img src="images/arrow-down-right.png"  alt="" class="social-arrow" />
+                            <img src="images/arrow-down-right.png"  alt="External link arrow" class="social-arrow" />
                         </a>
                         <a href="https://www.linkedin.com/company/wevol3-web3-marketing" target="_blank" class="social-link w-inline-block">
                             <div class="social-text">linkedin</div>
-                            <img src="images/arrow-down-right.png"  alt="" class="social-arrow" />
+                            <img src="images/arrow-down-right.png"  alt="External link arrow" class="social-arrow" />
                         </a>
                         <a href="https://wevolv3.com" target="_blank" class="social-link w-inline-block">
                             <div class="social-text">website</div>
-                            <img src="images/arrow-down-right.png"  alt="" class="social-arrow" />
+                            <img src="images/arrow-down-right.png"  alt="External link arrow" class="social-arrow" />
                         </a>
                         <a href="https://t.me/wevolv3" target="_blank" class="social-link w-inline-block">
                             <div class="social-text">telegram</div>
-                            <img src="images/arrow-down-right.png"  alt="" class="social-arrow" />
+                            <img src="images/arrow-down-right.png"  alt="External link arrow" class="social-arrow" />
                         </a>
                         <a href="https://wevolv3.com/blog" class="social-link last-social w-inline-block">
                             <div class="social-text">blog</div>
-                            <img src="images/arrow-down-right.png"  alt="" class="social-arrow" />
+                            <img src="images/arrow-down-right.png"  alt="External link arrow" class="social-arrow" />
                         </a>
                     </div>
                 </div>
@@ -255,7 +255,7 @@
                         2025 Wevolv3. All rights reserved.
                     </div>
                     <div data-w-id="darkyn06" class="right-copyright">
-                        <a href="#home" class="backtotop w-inline-block"><img  src="images/back-top_1back-top.png" alt="" /></a>
+                        <a href="#home" class="backtotop w-inline-block"><img  src="images/back-top_1back-top.png" alt="Back to top" /></a>
                     </div>
                 </div>
             </div>
