--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta content="width=device-width, initial-scale=1" name="viewport" />
 
         <title>Web3 Marketing Agency for Crypto & Blockchain Projects Worldwide | Wevolv3</title>
-        <meta name="description" content="Wevolv3 is a Web3 Marketing & Modular Advertising Agency. We help crypto, DeFi, and blockchain projects grow through innovative marketing strategies and targeted campaigns.">
+        <meta name="description" content="Wevolv3 is the Web3 marketing agency that turns attention into adoption. We help crypto, DeFi, and blockchain projects grow with community building, KOL campaigns, PR, and growth hacking. Get strategic, modular marketing — contact us.">
         <meta name="keywords" content="Web3 marketing, crypto marketing, DeFi marketing, blockchain marketing, token marketing, NFT marketing, crypto advertising, Web3 agency">
         <meta name="author" content="Wevolv3">
         <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
@@ -79,6 +79,168 @@
             "target": "https://wevolv3.com/blog?search={search_term_string}",
             "query-input": "required name=search_term_string"
           }
+        }
+        </script>
+
+        <!-- Schema.org Services -->
+        <script type="application/ld+json">
+        [
+          {
+            "@context": "https://schema.org",
+            "@type": "Service",
+            "name": "Web3 Community Management",
+            "description": "Strategic community management and growth for Web3 and crypto projects across Telegram, Discord, and other platforms.",
+            "provider": { "@type": "Organization", "name": "Wevolv3", "url": "https://wevolv3.com" },
+            "serviceType": "Web3 Marketing",
+            "areaServed": { "@type": "Place", "name": "Worldwide" }
+          },
+          {
+            "@context": "https://schema.org",
+            "@type": "Service",
+            "name": "Crypto ADS Placement",
+            "description": "Targeted advertising and ad placement for crypto, DeFi, and blockchain campaigns.",
+            "provider": { "@type": "Organization", "name": "Wevolv3", "url": "https://wevolv3.com" },
+            "serviceType": "Web3 Marketing",
+            "areaServed": { "@type": "Place", "name": "Worldwide" }
+          },
+          {
+            "@context": "https://schema.org",
+            "@type": "Service",
+            "name": "Web3 Growth Hacking",
+            "description": "Growth hacking and user acquisition strategies for Web3 projects, driving adoption and retention.",
+            "provider": { "@type": "Organization", "name": "Wevolv3", "url": "https://wevolv3.com" },
+            "serviceType": "Web3 Marketing",
+            "areaServed": { "@type": "Place", "name": "Worldwide" }
+          },
+          {
+            "@context": "https://schema.org",
+            "@type": "Service",
+            "name": "Influence Marketing (KOL)",
+            "description": "Key Opinion Leader campaigns connecting Web3 projects with influential voices in the crypto space.",
+            "provider": { "@type": "Organization", "name": "Wevolv3", "url": "https://wevolv3.com" },
+            "serviceType": "Web3 Marketing",
+            "areaServed": { "@type": "Place", "name": "Worldwide" }
+          },
+          {
+            "@context": "https://schema.org",
+            "@type": "Service",
+            "name": "Design & Motion",
+            "description": "Creative design and motion graphics for Web3 branding, social media, and marketing campaigns.",
+            "provider": { "@type": "Organization", "name": "Wevolv3", "url": "https://wevolv3.com" },
+            "serviceType": "Web3 Marketing",
+            "areaServed": { "@type": "Place", "name": "Worldwide" }
+          },
+          {
+            "@context": "https://schema.org",
+            "@type": "Service",
+            "name": "Guerrilla Marketing",
+            "description": "Unconventional and high-impact guerrilla marketing tactics for crypto and Web3 projects.",
+            "provider": { "@type": "Organization", "name": "Wevolv3", "url": "https://wevolv3.com" },
+            "serviceType": "Web3 Marketing",
+            "areaServed": { "@type": "Place", "name": "Worldwide" }
+          },
+          {
+            "@context": "https://schema.org",
+            "@type": "Service",
+            "name": "Token & Exchange Listing",
+            "description": "Support for token listings on centralized and decentralized exchanges.",
+            "provider": { "@type": "Organization", "name": "Wevolv3", "url": "https://wevolv3.com" },
+            "serviceType": "Web3 Marketing",
+            "areaServed": { "@type": "Place", "name": "Worldwide" }
+          },
+          {
+            "@context": "https://schema.org",
+            "@type": "Service",
+            "name": "Crypto PR & Media",
+            "description": "Public relations and media coverage on top crypto outlets including Forbes, Cointelegraph, CoinDesk, and more.",
+            "provider": { "@type": "Organization", "name": "Wevolv3", "url": "https://wevolv3.com" },
+            "serviceType": "Web3 Marketing",
+            "areaServed": { "@type": "Place", "name": "Worldwide" }
+          }
+        ]
+        </script>
+
+        <!-- Schema.org Reviews (Testimonials) -->
+        <script type="application/ld+json">
+        [
+          {
+            "@context": "https://schema.org",
+            "@type": "Review",
+            "itemReviewed": { "@type": "Service", "name": "Web3 Marketing Services by Wevolv3" },
+            "reviewRating": { "@type": "Rating", "ratingValue": "5", "bestRating": "5" },
+            "reviewBody": "With Wevolv3 we have the smoothest and most consistent marketing we've ever had.",
+            "author": { "@type": "Person", "name": "Mira", "jobTitle": "CEO, Utility Project" },
+            "publisher": { "@type": "Organization", "name": "Wevolv3" }
+          },
+          {
+            "@context": "https://schema.org",
+            "@type": "Review",
+            "itemReviewed": { "@type": "Service", "name": "Web3 Marketing Services by Wevolv3" },
+            "reviewRating": { "@type": "Rating", "ratingValue": "5", "bestRating": "5" },
+            "reviewBody": "The team's ability to pivot strategies based on real-time market data saved our launch. We saw a 300% increase in qualified users and 85% retention rate in the first month. True strategic partners.",
+            "author": { "@type": "Person", "name": "Alex Luther", "jobTitle": "CMO, L1 Blockchain" },
+            "publisher": { "@type": "Organization", "name": "Wevolv3" }
+          },
+          {
+            "@context": "https://schema.org",
+            "@type": "Review",
+            "itemReviewed": { "@type": "Service", "name": "Web3 Marketing Services by Wevolv3" },
+            "reviewRating": { "@type": "Rating", "ratingValue": "5", "bestRating": "5" },
+            "reviewBody": "Amazing work, you are the best. LETS GOOO",
+            "author": { "@type": "Person", "name": "MAC", "jobTitle": "Global KOL and Advisor" },
+            "publisher": { "@type": "Organization", "name": "Wevolv3" }
+          },
+          {
+            "@context": "https://schema.org",
+            "@type": "Review",
+            "itemReviewed": { "@type": "Service", "name": "Web3 Marketing Services by Wevolv3" },
+            "reviewRating": { "@type": "Rating", "ratingValue": "5", "bestRating": "5" },
+            "reviewBody": "Their local presence in LATAM opened doors we didn't even know existed. We expanded our user base by 450% in the region and achieved 2.5M+ impressions in the first quarter. Essential for our global expansion.",
+            "author": { "@type": "Person", "name": "Jax", "jobTitle": "Head of Growth, DeFi Aggregator" },
+            "publisher": { "@type": "Organization", "name": "Wevolv3" }
+          }
+        ]
+        </script>
+
+        <!-- Schema.org FAQPage -->
+        <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "FAQPage",
+          "mainEntity": [
+            {
+              "@type": "Question",
+              "name": "What is a Web3 Marketing Agency?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "A Web3 marketing agency specializes in promoting crypto, DeFi, NFT, and blockchain projects through community building, PR, paid ads, KOL campaigns, and growth strategies tailored to the Web3 ecosystem."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "How can Wevolv3 help my crypto project grow?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Wevolv3 offers modular marketing solutions including community management, KOL campaigns, ad placement, growth hacking, and PR. We focus on turning attention into adoption and delivering measurable results."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "What are the key differences between Web2 and Web3 marketing?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Web3 marketing targets token holders and community-driven audiences, uses crypto-native channels like Telegram, Discord, and X, and ties campaigns to on-chain metrics and community trust rather than just reach."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "How do I get started or contact Wevolv3?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "You can reach Wevolv3 via Telegram at @wevolv3, email at contact@wevolv3.com, or through the contact form on our website. We'll discuss your project goals and craft a tailored strategy."
+              }
+            }
+          ]
         }
         </script>
 
@@ -211,7 +373,7 @@
             <div class="w-layout-blockcontainer main-container w-container">
                 <div class="hero-grid">
                     <div  class="hero-left">
-                        <h1 data-w-id="darkyn20" style="opacity: 0;" class="hero-big-text">Web3</h1>
+                        <h2 data-w-id="darkyn20" style="opacity: 0;" class="hero-big-text">Web3</h2>
                     </div>
                     <div id="darkyn18" data-w-id="darkyn19" style="opacity: 0;" class="hero-mid">
                         <p class="hero-paragraph">
@@ -227,21 +389,21 @@
                         </div>
                     </div>
                     <div id="darkyn21" class="hero-right">
-                        <h1 data-w-id="darkyn22" style="opacity: 0;" class="hero-big-text">Era</h1>
+                        <h2 data-w-id="darkyn22" style="opacity: 0;" class="hero-big-text">Era</h2>
                     </div>
                 </div>
                 <div class="hero-partners">
                     <div data-w-id="darkyn23" class="hero-partners-moving">
-                        <img src="images/1.png"  width="238.5" alt="Forbes - Media Partner" class="hero-client-logo" loading="lazy" />
-                        <img src="images/2.png"  width="238.5" alt="Bitcoin.com - Media Partner" class="hero-client-logo" loading="lazy" />
-                        <img src="images/3.png"  width="238.5" alt="Cointelegraph - Media Partner" class="hero-client-logo" loading="lazy" />
-                        <img src="images/5.png"  width="238.5" alt="CoinDesk - Media Partner" class="hero-client-logo" loading="lazy" />
-                        <img src="images/6.png"  width="238.5" alt="Binance - Media Partner" class="hero-client-logo" loading="lazy" />
-                        <img src="images/7.png"  width="238.5" alt="CoinMarketCap - Media Partner" class="hero-client-logo" loading="lazy" />
-                        <img src="images/4.png"  width="238.5" alt="Skkicmotion - Media Partner" class="hero-client-logo" loading="lazy" />
-                        <img src="images/1.png"  width="238.5" alt="Forbes - Media Partner" class="hero-client-logo" loading="lazy" />
-                        <img src="images/2.png"  width="238.5" alt="Bitcoin.com - Media Partner" class="hero-client-logo" loading="lazy" />
-                        <img src="images/3.png"  width="238.5" alt="Cointelegraph - Media Partner" class="hero-client-logo" loading="lazy" />
+                        <img src="images/forbes-media-partner.png"  width="238.5" alt="Forbes - Media Partner" class="hero-client-logo" loading="lazy" />
+                        <img src="images/bitcoin-com-media-partner.png"  width="238.5" alt="Bitcoin.com - Media Partner" class="hero-client-logo" loading="lazy" />
+                        <img src="images/cointelegraph-media-partner.png"  width="238.5" alt="Cointelegraph - Media Partner" class="hero-client-logo" loading="lazy" />
+                        <img src="images/coindesk-media-partner.png"  width="238.5" alt="CoinDesk - Media Partner" class="hero-client-logo" loading="lazy" />
+                        <img src="images/binance-media-partner.png"  width="238.5" alt="Binance - Media Partner" class="hero-client-logo" loading="lazy" />
+                        <img src="images/coinmarketcap-media-partner.png"  width="238.5" alt="CoinMarketCap - Media Partner" class="hero-client-logo" loading="lazy" />
+                        <img src="images/skkicmotion-media-partner.png"  width="238.5" alt="Skkicmotion - Media Partner" class="hero-client-logo" loading="lazy" />
+                        <img src="images/forbes-media-partner.png"  width="238.5" alt="Forbes - Media Partner" class="hero-client-logo" loading="lazy" />
+                        <img src="images/bitcoin-com-media-partner.png"  width="238.5" alt="Bitcoin.com - Media Partner" class="hero-client-logo" loading="lazy" />
+                        <img src="images/cointelegraph-media-partner.png"  width="238.5" alt="Cointelegraph - Media Partner" class="hero-client-logo" loading="lazy" />
                     </div>
                 </div>
             </div>
@@ -696,6 +858,30 @@
             </div>
         </div>
 
+
+        <section id="faq" class="faq-section">
+            <div class="w-layout-blockcontainer main-container w-container">
+                <h2 class="main-title">Frequently Asked Questions</h2>
+                <div class="faq-list">
+                    <div class="faq-item">
+                        <h3 class="faq-question">What is a Web3 Marketing Agency?</h3>
+                        <p class="faq-answer">A Web3 marketing agency specializes in promoting crypto, DeFi, NFT, and blockchain projects through community building, PR, paid ads, KOL campaigns, and growth strategies tailored to the Web3 ecosystem.</p>
+                    </div>
+                    <div class="faq-item">
+                        <h3 class="faq-question">How can Wevolv3 help my crypto project grow?</h3>
+                        <p class="faq-answer">Wevolv3 offers modular marketing solutions including community management, KOL campaigns, ad placement, growth hacking, and PR. We focus on turning attention into adoption and delivering measurable results.</p>
+                    </div>
+                    <div class="faq-item">
+                        <h3 class="faq-question">What are the key differences between Web2 and Web3 marketing?</h3>
+                        <p class="faq-answer">Web3 marketing targets token holders and community-driven audiences, uses crypto-native channels like Telegram, Discord, and X, and ties campaigns to on-chain metrics and community trust rather than just reach.</p>
+                    </div>
+                    <div class="faq-item">
+                        <h3 class="faq-question">How do I get started or contact Wevolv3?</h3>
+                        <p class="faq-answer">You can reach Wevolv3 via Telegram at <a href="https://t.me/wevolv3" target="_blank">@wevolv3</a>, email at <a href="mailto:contact@wevolv3.com">contact@wevolv3.com</a>, or through our <a href="contact.html">contact form</a>. We'll discuss your project goals and craft a tailored strategy.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <div class="footer">
             <div class="w-layout-blockcontainer main-container w-container">
