FAQ: textos problema/solução sem traços, dropdown (details/summary), ano dinâmico, fixes visuais
- FAQ: 4 respostas reescritas (foco problema/solução, linguagem simples)
- FAQ: dropdown com details/summary (acessível, SEO preservado)
- Rodapé: ano dinâmico (span + script) em todas as páginas
- CSS: título FAQ line-height para evitar sobreposição
- CSS: hero-big-text font-weight 700 (paridade com site ao vivo)
- Schema FAQPage atualizado com novos textos
- docs: RELATORIO_MODIFICACOES_SEO_UX.md

Made-with: Cursor

--- a/about.html
+++ b/about.html
@@ -387,7 +387,7 @@
                 
                 <div class="copyright">
                     <div data-w-id="darkyn05" class="copyright-text">
-                        2025 Wevolv3. All rights reserved.
+                        <span class="copyright-year">2026</span> Wevolv3. All rights reserved.
                     </div>
                     <div data-w-id="darkyn06" class="right-copyright">
                         <a href="#home" class="backtotop w-inline-block"><img  src="images/back-top_1back-top.png" alt="Back to top" /></a>
@@ -432,7 +432,7 @@
         <script src="js/jquery.min.js" type="text/javascript"></script>
         <script src="js/plugins.js" type="text/javascript"></script>
 
-
+    <script>document.querySelectorAll('.copyright-year').forEach(function(e){e.textContent=new Date().getFullYear();});</script>
     </body>
 
 </html>
