--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
               "name": "What is a Web3 Marketing Agency?",
               "acceptedAnswer": {
                 "@type": "Answer",
-                "text": "A Web3 marketing agency specializes in promoting crypto, DeFi, NFT, and blockchain projects through community building, PR, paid ads, KOL campaigns, and growth strategies tailored to the Web3 ecosystem."
+                "text": "A Web3 marketing agency helps crypto and blockchain projects with the same kind of problems you might have: nobody knows us, our community is quiet, we don't know where to advertise, or we tried ads but didn't get real users. We focus on getting you known in the right places, bringing in people who care about your project, and turning that into real use and growth, not just numbers on a screen."
               }
             },
             {
@@ -221,7 +221,7 @@
               "name": "How can Wevolv3 help my crypto project grow?",
               "acceptedAnswer": {
                 "@type": "Answer",
-                "text": "Wevolv3 offers modular marketing solutions including community management, KOL campaigns, ad placement, growth hacking, and PR. We focus on turning attention into adoption and delivering measurable results."
+                "text": "We help with the things that usually block growth: empty or disengaged communities, ads that don't bring the right users, lack of trust, and no clear plan. We can run your community, place ads where your audience actually is, work with influential people in the space, get you press coverage, and test what works so you get more real users and retention, not just traffic."
               }
             },
             {
@@ -229,7 +229,7 @@
               "name": "What are the key differences between Web2 and Web3 marketing?",
               "acceptedAnswer": {
                 "@type": "Answer",
-                "text": "Web3 marketing targets token holders and community-driven audiences, uses crypto-native channels like Telegram, Discord, and X, and ties campaigns to on-chain metrics and community trust rather than just reach."
+                "text": "In normal marketing you often buy clicks and hope they convert. In Web3, your audience is on Telegram, Discord, and X, cares about the project and the token, and trusts the community as much as the product. So we focus on building that trust, showing up where they already are, and growing in a way that fits crypto, not just running the same playbook as a regular app."
               }
             },
             {
@@ -237,7 +237,7 @@
               "name": "How do I get started or contact Wevolv3?",
               "acceptedAnswer": {
                 "@type": "Answer",
-                "text": "You can reach Wevolv3 via Telegram at @wevolv3, email at contact@wevolv3.com, or through the contact form on our website. We'll discuss your project goals and craft a tailored strategy."
+                "text": "Tell us what's not working today (for example, our community is dead, we need more users, nobody knows we exist). You can reach us on Telegram at @wevolv3, by email at contact@wevolv3.com, or via our contact form. We'll ask a few questions, understand your situation, and then propose concrete steps. No commitment until you're comfortable."
               }
             }
           ]
@@ -863,22 +863,22 @@
             <div class="w-layout-blockcontainer main-container w-container">
                 <h2 class="main-title">Frequently Asked Questions</h2>
                 <div class="faq-list">
-                    <div class="faq-item">
-                        <h3 class="faq-question">What is a Web3 Marketing Agency?</h3>
-                        <p class="faq-answer">A Web3 marketing agency specializes in promoting crypto, DeFi, NFT, and blockchain projects through community building, PR, paid ads, KOL campaigns, and growth strategies tailored to the Web3 ecosystem.</p>
-                    </div>
-                    <div class="faq-item">
-                        <h3 class="faq-question">How can Wevolv3 help my crypto project grow?</h3>
-                        <p class="faq-answer">Wevolv3 offers modular marketing solutions including community management, KOL campaigns, ad placement, growth hacking, and PR. We focus on turning attention into adoption and delivering measurable results.</p>
-                    </div>
-                    <div class="faq-item">
-                        <h3 class="faq-question">What are the key differences between Web2 and Web3 marketing?</h3>
-                        <p class="faq-answer">Web3 marketing targets token holders and community-driven audiences, uses crypto-native channels like Telegram, Discord, and X, and ties campaigns to on-chain metrics and community trust rather than just reach.</p>
-                    </div>
-                    <div class="faq-item">
-                        <h3 class="faq-question">How do I get started or contact Wevolv3?</h3>
-                        <p class="faq-answer">You can reach Wevolv3 via Telegram at <a href="https://t.me/wevolv3" target="_blank">@wevolv3</a>, email at <a href="mailto:contact@wevolv3.com">contact@wevolv3.com</a>, or through our <a href="contact.html">contact form</a>. We'll discuss your project goals and craft a tailored strategy.</p>
-                    </div>
+                    <details class="faq-item">
+                        <summary class="faq-question">What is a Web3 Marketing Agency?</summary>
+                        <p class="faq-answer">A Web3 marketing agency helps crypto and blockchain projects with the same kind of problems you might have: "nobody knows us," "our community is quiet," "we don't know where to advertise," or "we tried ads but didn't get real users." We focus on getting you known in the right places, bringing in people who care about your project, and turning that into real use and growth, not just numbers on a screen.</p>
+                    </details>
+                    <details class="faq-item">
+                        <summary class="faq-question">How can Wevolv3 help my crypto project grow?</summary>
+                        <p class="faq-answer">We help with the things that usually block growth: empty or disengaged communities, ads that don't bring the right users, lack of trust, and no clear plan. We can run your community, place ads where your audience actually is, work with influential people in the space, get you press coverage, and test what works so you get more real users and retention, not just traffic.</p>
+                    </details>
+                    <details class="faq-item">
+                        <summary class="faq-question">What are the key differences between Web2 and Web3 marketing?</summary>
+                        <p class="faq-answer">In "normal" marketing you often buy clicks and hope they convert. In Web3, your audience is on Telegram, Discord, and X, cares about the project and the token, and trusts the community as much as the product. So we focus on building that trust, showing up where they already are, and growing in a way that fits crypto, not just running the same playbook as a regular app.</p>
+                    </details>
+                    <details class="faq-item">
+                        <summary class="faq-question">How do I get started or contact Wevolv3?</summary>
+                        <p class="faq-answer">Tell us what's not working today (for example, "our community is dead," "we need more users," "nobody knows we exist"). You can reach us on Telegram at <a href="https://t.me/wevolv3" target="_blank">@wevolv3</a>, by email at <a href="mailto:contact@wevolv3.com">contact@wevolv3.com</a>, or via our <a href="contact.html">contact form</a>. We'll ask a few questions, understand your situation, and then propose concrete steps. No commitment until you're comfortable.</p>
+                    </details>
                 </div>
             </div>
         </section>
@@ -923,7 +923,7 @@
                 
                 <div class="copyright">
                     <div data-w-id="darkyn05" class="copyright-text">
-                        2025 Wevolv3. All rights reserved.
+                        <span class="copyright-year">2026</span> Wevolv3. All rights reserved.
                     </div>
                     <div data-w-id="darkyn06" class="right-copyright">
                         <a href="#home" class="backtotop w-inline-block"><img  src="images/back-top_1back-top.png" alt="Back to top" /></a>
@@ -1486,6 +1486,7 @@
             })();
         </script>
 
+        <script>document.querySelectorAll('.copyright-year').forEach(function(e){e.textContent=new Date().getFullYear();});</script>
     </body>
 
 </html>
